FIX: Update CSS class in task ILO alignment editor less file

--- a/src/app/tasks/task-ilo-alignment/task-ilo-alignment-editor/task-ilo-alignment-editor.less
+++ b/src/app/tasks/task-ilo-alignment/task-ilo-alignment-editor/task-ilo-alignment-editor.less
@@ -1,4 +1,4 @@
-.student-list {
+.task-ilo-alignment-editor {
   .alignment-panels .panel-body {
     overflow: scroll;
   }
